Readme: Fix deployment badge on github
Had the format wrong for the deployment badge.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "boozefund.com",
     "www.boozefund.com"
   ],
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "scripts": {
     "start": "app.js"
   },
